--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ h6 {
 	float: left;
 }
 
+.flag-ico {
+	width: 40px;
+}
+
 .caret {
 	border-left: 6px solid transparent;
 	border-right: 6px solid transparent;
