--- a/css/editor.css
+++ b/css/editor.css
@@ -12,9 +12,12 @@
 	border-top: 0;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
+	font-size: 12px;
+	line-height: 16px;
 }
 
-.editor-nav button {
+.editor-nav button,
+.editor-nav select {
 	background-color: rgba(255, 255, 255, .5);
 	display: inline-block;
 	border: none;
@@ -23,13 +26,27 @@
 }
 
 /*  Examples dropdown  */
-.editor-examples {
-
-}
-
-.editor-examples button {
+.editor-examples select {
 	color: white;
 	padding: 7px 32px 7px 14px;
+	font-weight: 700;
+}
+.editor-examples option {
+	font-weight: 500;
+}
+
+.editor-select {
+	-moz-appearance: none;
+}
+.editor-examples-dropdown:after {
+	content: "\f078";
+	position: absolute;
+	top: 8px;
+	right: 12px;
+	font-family: 'FontAwesome';
+	font-size: 14px;
+	color: white;
+	pointer-events: none;
 }
 
 .editor-examples button:focus, 
@@ -68,11 +85,12 @@
 	height: 35px;
 	width: 40px;
 	margin-left: 5px;
+	color: white;
+	font-size: 20px;
+	line-height: 16px;
 }
-
-.editor-cta button img {
-	max-width: 25px;
-	max-height: 25px;
+.editor-cta .fa-arrow-right {
+	font-size: 17px;
 }
 
 .editor-cta-load {
